JAKARTA TOMCAT CONNECTORS 2 (JK2) CHANGELOG:			-*-text-*-
Last modified at [$Date$]

Changes with JK2 2.0.3:
    * jk2 set correctly the content-type in Apache 2.0,
      making it ready to works with mod_deflate and AddOutputFilterByType 
      [Henri Gomez]
      
Changes with JK2 2.0.2:
    * Fix the bug 14293. Thanks to Martin Kraemer for his help.
      [Jean-Frederic Clere]
    * Don't send initial chunk for chunked encoding, fix #14282
      [Costin Manolache]
    * Fix the POST data on JNI
      [Mladen Turk]
    * Remove the deprecated message for path
      [Costin Manolache]
    * Add the regular expressions to uriMap. The regex uris are differentiated
      to normal one by starting with dollar ($) sign.
      [Mladen Turk]
    * Add the max_connections to the wajp13 worker.
      [Mladen Turk]    
    * Add the hostMap cache
      [Mladen Turk] 
    * Allow the lb:name scheme inside the [channel.xxx]
      [Mladen Turk]
    * Duplicate all global directives on each vhost that has inheritGlobals set.
      Directives   are   created   using   createBean   only   if   not   found.
      Beside directives, the webapps are duplicated to.
      [Mladen Turk]
      
Changes with JK2 2.0.1:

    * Tentative fix for 12346.
      If an unrecoverable error happens ( for example when the client hits  stop
      the server can't send more data   since the connection is lost )  we  need
      to forcefully break the ajp13 connection, since tomcat can't know this and
      will continue to send data.

      This behavior is a result of the optimizations made for the 'normal' case,
      i.e.  the fact  that tomcat  doesn't wait  for confirmation  when  sending
      chunks of data.  Adding the roundtrip  will have big  negative performance
      hit - and it's better to deal with the error cases.

      Note that  the alternative  ( and  what seems  to happen  for apache  ) is
      to ignore  the server  errors and  continue to  receive chunks  and ignore